<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:background="@drawable/back"
    android:layout_width="match_parent"
    android:onClick="btnClickWin"
    android:id="@+id/RulesId"
    android:layout_height="match_parent">
    
    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:textColor="#ffffff"
        android:textSize="@dimen/spvalue20"
        android:layout_height="wrap_content"
        android:text="@string/rul"/>
        <TextView
            android:layout_width="wrap_content"
            android:textColor="#ffffff"
            android:textSize="@dimen/spvalue20"
            android:layout_height="wrap_content"
            android:text="@string/rul2"/>
        <TextView
            android:layout_width="wrap_content"
            android:textColor="#ffffff"
            android:textSize="@dimen/spvalue20"
            android:layout_height="wrap_content"
            android:text="@string/rul3"/>
        <TextView
            android:layout_width="wrap_content"
            android:textColor="#ffffff"
            android:textSize="@dimen/spvalue20"
            android:layout_height="wrap_content"
            android:text="@string/rul4"/>
    
    
</LinearLayout>